--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
     "devDependencies": {
         "@eslint/js": "^9.19.0",
         "@types/node": "^20.11.19",
+        "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.4.17",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-react": "^7.37.3",
         "eslint-plugin-react-hooks": "^5.1.0",
+        "postcss": "^8.4.35",
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
-        "typescript-eslint": "^8.23.0",
-        "@vitejs/plugin-react": "^4.2.1",
-        "autoprefixer": "^10.4.17",
-        "postcss": "^8.4.35",
         "tailwindcss": "^3.4.1",
         "typescript": "^5.3.3",
+        "typescript-eslint": "^8.23.0",
         "vite": "^5.1.3"
     },
     "dependencies": {
@@ -50,7 +50,7 @@
         "@types/react": "^18.2.55",
         "@types/react-dom": "^18.2.19",
         "class-variance-authority": "^0.7.0",
-        "clsx": "^2.1.0",
+        "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
         "date-fns": "^3.3.1",
         "globals": "^15.14.0",
@@ -58,7 +58,8 @@
         "lucide-react": "^0.331.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "tailwind-merge": "^2.2.1",
+        "sonner": "^2.0.3",
+        "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.3.3",
         "vite": "^5.1.3"
