--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
     "devDependencies": {
         "@eslint/js": "^9.19.0",
         "@types/node": "^20.11.19",
-        "@vitejs/plugin-react": "^4.2.1",
-        "autoprefixer": "^10.4.17",
+        "@vitejs/plugin-react": "^4.4.1",
+        "autoprefixer": "^10.4.21",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
         "eslint-plugin-react": "^7.37.3",
         "eslint-plugin-react-hooks": "^5.1.0",
-        "postcss": "^8.4.35",
+        "postcss": "^8.5.3",
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
-        "tailwindcss": "^3.4.1",
+        "tailwindcss": "^4.1.6",
         "typescript": "^5.3.3",
         "typescript-eslint": "^8.23.0",
-        "vite": "^5.1.3"
+        "vite": "^6.3.5"
     },
     "dependencies": {
         "@headlessui/react": "^2.2.0",
@@ -53,16 +53,18 @@
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
         "date-fns": "^3.3.1",
+        "framer-motion": "^12.10.5",
         "globals": "^15.14.0",
+        "laravel-echo": "^2.1.4",
         "laravel-vite-plugin": "^1.0",
         "lucide-react": "^0.331.0",
+        "pusher-js": "^8.4.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "sonner": "^2.0.3",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
-        "typescript": "^5.3.3",
-        "vite": "^5.1.3"
+        "typescript": "^5.3.3"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
