--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,38 +11,15 @@ services:
     working_dir: /var/www
     volumes:
       - ./:/var/www
-    networks:
-      - wispr-network
-
-  # Nginx Service
-  webserver:
-    image: nginx:alpine
-    container_name: wispr-nginx
-    restart: unless-stopped
+      - /var/www/vendor/
+      - /var/www/node_modules/
+      - /var/www/admin/node_modules/
     ports:
-      - "8000:80"
-    volumes:
-      - ./:/var/www
-      - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
-    networks:
-      - wispr-network
-    depends_on:
-      - app
-
-  # MySQL Service
-  db:
-    image: mysql:8.0
-    container_name: wispr-db
-    restart: unless-stopped
+      - "8000:8000"
     environment:
-      MYSQL_DATABASE: ${DB_DATABASE}
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-      MYSQL_USER: ${DB_USERNAME}
-      SERVICE_TAGS: dev
-      SERVICE_NAME: mysql
-    volumes:
-      - ./docker/mysql/data:/var/lib/mysql
+      - APP_ENV=local
+      - APP_DEBUG=true
+    command: sh -c "php artisan serve --host=0.0.0.0 --port=8000"
     networks:
       - wispr-network
 
@@ -53,7 +30,9 @@ services:
     working_dir: /var/www
     volumes:
       - ./:/var/www
-    command: sh -c "cd admin && npm install && npm run dev"
+      - /var/www/node_modules/
+      - /var/www/admin/node_modules/
+    command: sh -c "cd admin && npm ci && npm run dev"
     ports:
       - "5173:5173"
     networks:
