--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "tsc && vite build",
+        "build": "vite build",
+        "build:types": "tsc && vite build",
         "build:ssr": "vite build && vite build --ssr",
         "dev": "vite",
         "format": "prettier --write resources/",
@@ -23,7 +24,7 @@
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
-        "tailwindcss": "^4.1.6",
+        "tailwindcss": "^4.1.8",
         "typescript": "^5.3.3",
         "typescript-eslint": "^8.23.0",
         "vite": "^6.3.5"
@@ -46,7 +47,7 @@
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
-        "@tailwindcss/vite": "^4.0.6",
+        "@tailwindcss/vite": "^4.1.8",
         "@types/react": "^18.2.55",
         "@types/react-dom": "^18.2.19",
         "class-variance-authority": "^0.7.0",
