--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "devDependencies": {
         "@eslint/js": "^9.19.0",
         "@types/node": "^20.11.19",
+        "@types/react": "^19.1.7",
+        "@types/react-dom": "^19.1.6",
         "@vitejs/plugin-react": "^4.4.1",
         "autoprefixer": "^10.4.21",
         "eslint": "^9.17.0",
@@ -48,8 +50,8 @@
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
         "@tailwindcss/vite": "^4.1.8",
-        "@types/react": "^18.2.55",
-        "@types/react-dom": "^18.2.19",
+        "@types/react-syntax-highlighter": "^15.5.13",
+        "axios": "^1.9.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
@@ -62,6 +64,7 @@
         "pusher-js": "^8.4.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-syntax-highlighter": "^15.6.1",
         "sonner": "^2.0.3",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
