--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@types/lodash": "^4.17.17",
         "@types/node": "^20.11.19",
         "@types/react": "^19.1.7",
         "@types/react-dom": "^19.1.6",
